--- a/msjd.css
+++ b/msjd.css
@@ -1,28 +1,29 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-header {
-  background-color: #028090;
-  color: white;
-  padding: 1em;
-  text-align: center;
-}
-
-nav a {
-  color: white;
-  margin: 0 1em;
-  text-decoration: none;
-}
-
-main {
-  padding: 2em;
-}
-
-footer {
-  text-align: center;
-  padding: 1em;
-  background: #eee;
-}
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+  header {
+    background-color: #02735E;
+    color: white;
+    padding: 1rem;
+    text-align: center;
+  }
+  nav a {
+    margin: 0 1rem;
+    color: white;
+    text-decoration: none;
+  }
+  main {
+    padding: 2rem;
+  }
+  section {
+    margin-bottom: 2rem;
+  }
+  footer {
+    background-color: #f1f1f1;
+    text-align: center;
+    padding: 1rem;
+  }
+</style>
